re #613 tried fixing the table borders and 48px icons are now always big instead of 16px on smaller screens

--- a/code/media/koowa/com_koowa/less/koowa/_table.less
+++ b/code/media/koowa/com_koowa/less/koowa/_table.less
@@ -21,17 +21,22 @@
 
     tbody {
         &.selected-single tr.selected td {
-            border-top-color: spin(@btnPrimaryBackground, 5%);
+            border-top: 1px solid spin(@btnPrimaryBackground, 5%);
             #gradient > .vertical(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
             .box-shadow(hsla(0, 0%, 100%, 0.2) 0 1px 0 inset);
             text-shadow: hsla(0, 0%, 0%, 0.2) 0 -1px 0;
+            height: auto;
         }
         &.selected-multiple tr.selected td {
+            border-top: 1px solid #ddd;
             background: @btnPrimaryBackground;
+            height: auto;
         }
 
         tr {
             td {
+                border-top: 1px solid #ddd;
+
                 a {
                     font-size: 1.1em;
                 }
